; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zinject/extr_zinject.c_parse_frequency.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zinject/extr_zinject.c_parse_frequency.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@ERANGE = common dso_local global i32 0, align 4
@ZI_PERCENTAGE_MAX = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64*)* @parse_frequency to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_frequency(i8* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca double, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64* %1, i64** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call double @strtod(i8* %8, i8** %7)
  store double %9, double* %6, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %17, label %12

12:                                               ; preds = %2
  %13 = load i8*, i8** %7, align 8
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %12, %2
  %18 = load i32, i32* @EINVAL, align 4
  store i32 %18, i32* %3, align 4
  br label %35

19:                                               ; preds = %12
  %20 = load double, double* %6, align 8
  %21 = fdiv double %20, 1.000000e+02
  store double %21, double* %6, align 8
  %22 = load double, double* %6, align 8
  %23 = fcmp olt double %22, 0x3EB0C6F7A0000000
  br i1 %23, label %27, label %24

24:                                               ; preds = %19
  %25 = load double, double* %6, align 8
  %26 = fcmp ogt double %25, 1.000000e+00
  br i1 %26, label %27, label %29

27:                                               ; preds = %24, %19
  %28 = load i32, i32* @ERANGE, align 4
  store i32 %28, i32* %3, align 4
  br label %35

29:                                               ; preds = %24
  %30 = load double, double* %6, align 8
  %31 = load double, double* @ZI_PERCENTAGE_MAX, align 8
  %32 = fmul double %30, %31
  %33 = fptosi double %32 to i64
  %34 = load i64*, i64** %5, align 8
  store i64 %33, i64* %34, align 8
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %29, %27, %17
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local double @strtod(i8*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
